--- a/src/Signup.css
+++ b/src/Signup.css
@@ -1,6 +1,6 @@
 body {
 	 color: #fff;
-	background: #4c535d;
+	background: #2a2b2b;
 	 
 } 
 .form-control {
@@ -22,7 +22,7 @@ body {
 	border-radius: 3px;
 	margin-bottom: 15px;
 	background: #fff;
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 3px 2px rgba(247, 246, 246, 0.3);
 	padding: 30px;
 }
 .signup-form h2 {
@@ -43,7 +43,7 @@ body {
 .signup-form .btn, .signup-form .btn:active {        
 	font-size: 16px;
 	font-weight: bold;
-	background: #5fcaba !important;
+	background: #29548b !important;
 	border: none;
 	min-width: 140px;
 }
@@ -64,3 +64,7 @@ body {
 .signup-form form a:hover {
 	text-decoration: underline;
 }
+.img-add {
+	max-height: 400px;
+	min-height: 500px;
+  }
